# receipt-designer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ReceiptDesigner.spec  SECURITY.md  architecture.md  pyproject.toml  pytest.ini  receipt_designer_version.txt  requirements.txt  run_receipt_designer.py
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question_support.yml
.github/workflows/: build-windows.yml  labels.yml
packaging/pyinstaller/: run_receipt_designer.py
receipt_designer/: __main__.py  app.py
receipt_designer/assets/Templates/: Barcode_checkList.json  Monthly_Bills.json  Prednisone_6_Day_Taper.json  Prednisone_8_Day_Taper.json
receipt_designer/core/: barcodes.py  commands.py  models.py  render.py  utils.py
receipt_designer/legacy/: receipt_designer_v4.py
receipt_designer/printing/: __init__.py  backends.py  exceptions.py  profiles.py  worker.py
receipt_designer/tests/: conftest.py  test_path_utils.py  test_template.py  test_ui_autosave_recovery.py  test_variables.py
receipt_designer/ui/: actions.py  common.py  host_protocols.py  inline_editor.py  items.py  layers.py  layout_ops.py  main_window.py  main_window_impl.py  persistence.py  presets.py  properties.py  toolbox.py  variables.py  views.py
receipt_designer/ui/canvas/: __init__.py  controller.py
receipt_designer/ui/dialogs/: __init__.py  column_guides.py  duplicate_offset.py  keyboard_shortcuts.py  print_preview.py  printer_config.py
receipt_designer/ui/docks/: __init__.py  layers_dock.py  properties_dock.py  variables_dock.py
tests/: conftest.py  test_path_utils.py  test_printing.py  test_template.py  test_ui_autosave_recovery.py  test_ui_smoke.py  test_variables.py
